--- a/index.html
+++ b/index.html
@@ -16,16 +16,69 @@
     </head>
     <body>
         <div id="Cuerpo">
-            <div class='Entrada'>
+            <a class='Entrada' href="http://devildrey33.github.io/Domino/domino.html">
                 <div class='Entrada_MarcoIzquierdo'></div>
                 <div class='Entrada_MarcoDerecho'></div>
-                <img src='./Graficos/Domino.png' />
-            </div>
-            <div class='Entrada'>
+                <div class="Entrada_Descripcion">
+                    <h1>Dominó 3D</h1>
+                    <p>Juego de dominó por parejas (solo para un jugador)</p>
+                </div>
+                <img src='./Graficos/250x200_Domino.png' />
+            </a>
+            <a class='Entrada' href="http://devildrey33.github.io/CyberParasit/">
                 <div class='Entrada_MarcoIzquierdo'></div>
                 <div class='Entrada_MarcoDerecho'></div>
-                <img src='./Graficos/Domino.png' />
-            </div>
+                <div class="Entrada_Descripcion">
+                    <h1>CyberParasit</h1>
+                    <p>Presentación / animación en 3D que consiste en varios cubos siguiendo el ritmo de una canción.</p>
+                </div>
+                <img src='./Graficos/250x200_CyberParasit.png' />
+            </a>
+            <a class='Entrada' href="http://devildrey33.github.io/EspectroAudible">
+                <div class='Entrada_MarcoIzquierdo'></div>
+                <div class='Entrada_MarcoDerecho'></div>
+                <div class="Entrada_Descripcion">
+                    <h1>EspectroAudible</h1>
+                    <p>Un analizador de espectro en 3D.</p>
+                </div>
+                <img src='./Graficos/250x200_EspectroAudible.png' />
+            </a>
+            <a class='Entrada' href="http://devildrey33.github.io/HexTunnel/">
+                <div class='Entrada_MarcoIzquierdo'></div>
+                <div class='Entrada_MarcoDerecho'></div>
+                <div class="Entrada_Descripcion">
+                    <h1>Hex Tunnel</h1>
+                    <p>Animación de un tunel de bloques con valores hexadecimales.</p>
+                </div>
+                <img src='./Graficos/250x200_HexTunnel.png' />
+            </a>
+            <a class='Entrada' href="http://devildrey33.github.io/Sinusoidal/">
+                <div class='Entrada_MarcoIzquierdo'></div>
+                <div class='Entrada_MarcoDerecho'></div>
+                <div class="Entrada_Descripcion">
+                    <h1>Sinusoidal</h1>
+                    <p>Animación de una onda aleatória.</p>
+                </div>
+                <img src='./Graficos/250x200_Sinusoidal.png' />
+            </a>
+            <a class='Entrada' href="http://devildrey33.github.io/EsferaVertexShader/">
+                <div class='Entrada_MarcoIzquierdo'></div>
+                <div class='Entrada_MarcoDerecho'></div>
+                <div class="Entrada_Descripcion">
+                    <h1>Esfera vertex shadder</h1>
+                    <p>.....</p>
+                </div>
+                <img src='./Graficos/250x200_EsferaVShader.png' />
+            </a>
+            <a class='Entrada' href="http://devildrey33.github.io/AdiestramientoCubos/">
+                <div class='Entrada_MarcoIzquierdo'></div>
+                <div class='Entrada_MarcoDerecho'></div>
+                <div class="Entrada_Descripcion">
+                    <h1>Adiestramiento de cubos</h1>
+                    <p>Mi primera animación en 3D utilizando Three.js</p>
+                </div>
+                <img src='./Graficos/250x200_Adiestramiento.png' />
+            </a>
         </div>
     </body>
 </html>
