--- a/index.html
+++ b/index.html
@@ -9,66 +9,93 @@
         <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
         <title>devildrey33</title>
         <!-- Estilos CSS para el objeto canvas -->
-        <link rel='stylesheet' href='./CSS/devildrey33.css' />        
-                
-        <!-- ObjetoCanvas similar al ObjetoBanner para testear Banners -->
-        <script src="./JS/ObjetoCanvas.js"></script>
+        <link rel='stylesheet' href='/CSS/devildrey33.css' />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> <!-- JQUERY -->
+        <script src="/JS/devildrey33.js"></script>                                                <!-- Script BASE -->
     </head>
     <body>
         <div id="Cuerpo">
-            <a class='Entrada' href="http://devildrey33.github.io/Domino/domino.html">
+            <a class='Entrada' href="/Domino/domino.html">
                 <div class='Entrada_MarcoIzquierdo'></div>
                 <div class='Entrada_MarcoDerecho'></div>
                 <div class="Entrada_Descripcion">
                     <h1>Dominó 3D</h1>
-                    <p>Juego de dominó por parejas (solo para un jugador)</p>
+                    <p>Juego de dominó en 3D, con las reglas básicas de un 2 contra 2 por parejas, <b>solo para un jugador</b>.</p>                    
+                    <table>
+                        <tr>
+                            <td>Categorías</td>
+                            <td>:</td>
+                            <td><b>JavaScript</b>, y <b>Three.js</b>.</td>
+                        </tr>
+                        <tr>
+                            <td>Publicado el</td>
+                            <td>:</td>
+                            <td><b>08/03/2019</b></td>
+                        </tr>
+                    </table>
                 </div>
+                <div class="FiltroImg"></div>
                 <img src='./Graficos/250x200_Domino.png' />
             </a>
-            <a class='Entrada' href="http://devildrey33.github.io/CyberParasit/">
+            <a class='Entrada' href="/CyberParasit/">
                 <div class='Entrada_MarcoIzquierdo'></div>
                 <div class='Entrada_MarcoDerecho'></div>
                 <div class="Entrada_Descripcion">
                     <h1>CyberParasit</h1>
                     <p>Presentación / animación en 3D que consiste en varios cubos siguiendo el ritmo de una canción.</p>
+                    <p><b>Se ha utilizado :</b> JavaScript, Three.js, JSON, y WebAudio.</p>
+                    <p><b>Publicado el :</b> 08/03/2019</p>
                 </div>
                 <img src='./Graficos/250x200_CyberParasit.png' />
+                <div class="FiltroImg"></div>
             </a>
-            <a class='Entrada' href="http://devildrey33.github.io/EspectroAudible">
+            <a class='Entrada' href="/EspectroAudible/">
                 <div class='Entrada_MarcoIzquierdo'></div>
                 <div class='Entrada_MarcoDerecho'></div>
                 <div class="Entrada_Descripcion">
                     <h1>EspectroAudible</h1>
                     <p>Un analizador de espectro en 3D.</p>
+                    <p><b>Se ha utilizado :</b> JavaScript, Three.js, y WebAudio.</p>
+                    <p><b>Publicado el :</b> 08/03/2019</p>
                 </div>
                 <img src='./Graficos/250x200_EspectroAudible.png' />
+                <div class="FiltroImg"></div>
             </a>
-            <a class='Entrada' href="http://devildrey33.github.io/HexTunnel/">
+            <a class='Entrada' href="/HexTunnel/">
                 <div class='Entrada_MarcoIzquierdo'></div>
                 <div class='Entrada_MarcoDerecho'></div>
                 <div class="Entrada_Descripcion">
                     <h1>Hex Tunnel</h1>
                     <p>Animación de un tunel de bloques con valores hexadecimales.</p>
+                    <p><b>Se ha utilizado :</b> JavaScript, y Three.js.</p>
+                    <p><b>Publicado el :</b> 08/03/2019</p>
                 </div>
                 <img src='./Graficos/250x200_HexTunnel.png' />
+                <div class="FiltroImg"></div>
             </a>
             <a class='Entrada' href="http://devildrey33.github.io/Sinusoidal/">
                 <div class='Entrada_MarcoIzquierdo'></div>
                 <div class='Entrada_MarcoDerecho'></div>
                 <div class="Entrada_Descripcion">
                     <h1>Sinusoidal</h1>
-                    <p>Animación de una onda aleatória.</p>
+                    <p>Animación de una onda generada aleatóriamente utilizando un número indeterminado de circulos, cada uno con un diámetro aleatório.</p>
+                    <p><b>Se ha utilizado :</b> JavaScript, y Canvas 2D.</p>
+                    <p><b>Publicado el :</b> 08/03/2019</p>
                 </div>
                 <img src='./Graficos/250x200_Sinusoidal.png' />
+                <div class="FiltroImg"></div>
             </a>
             <a class='Entrada' href="http://devildrey33.github.io/EsferaVertexShader/">
                 <div class='Entrada_MarcoIzquierdo'></div>
                 <div class='Entrada_MarcoDerecho'></div>
                 <div class="Entrada_Descripcion">
                     <h1>Esfera vertex shadder</h1>
-                    <p>.....</p>
+                    <p>Ejemplo básico para mover todos los vertices de la esfera ... </p>
+                    <p><b>Se ha utilizado :</b> JavaScript, y Three.js.</p>
+                    <p><b>Publicado el :</b> 08/03/2019</p>                    
                 </div>
                 <img src='./Graficos/250x200_EsferaVShader.png' />
+                <div class="FiltroImg"></div>
             </a>
             <a class='Entrada' href="http://devildrey33.github.io/AdiestramientoCubos/">
                 <div class='Entrada_MarcoIzquierdo'></div>
@@ -76,8 +103,11 @@
                 <div class="Entrada_Descripcion">
                     <h1>Adiestramiento de cubos</h1>
                     <p>Mi primera animación en 3D utilizando Three.js</p>
+                    <p><b>Se ha utilizado :</b> JavaScript, y Three.js.</p>
+                    <p><b>Publicado el :</b> 08/03/2019</p>                    
                 </div>
                 <img src='./Graficos/250x200_Adiestramiento.png' />
+                <div class="FiltroImg"></div>
             </a>
         </div>
     </body>
