--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <script>window.addEventListener('load', function() { Base.GenerarIndice(); });
         </script>
     </head>
-    <body>
+    <body data-cargando="true">
         <div id="Cuerpo">
 <!--            <div class="devildrey33_Indice">
                 <a class='Entrada' href="/Domino/domino.html">
